src/test/resources/typeSystemTestModels/invalid/interfaces/InterfaceNoFinalMethod.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid;

public interface InterfaceNoFinalMethod {

  final String getString();

}
